feature: mission 6 - service JPA 도입 and Controller 수정 완료 05.29